@@ -19,6 +19,8 @@ BUGFIXES
     o Fix for bug and crash when mapping bias RDS file contains variants with
       multiple alt alleles (#184)
     o Added missing dependency 'markdown'
+    o Fix for crash when only a small number of off-target intervals pass
+      filters (#192)
 
 
 Changes in version 1.22.0
